--- a/01-especificidade-efeito-cascata/index.html
+++ b/01-especificidade-efeito-cascata/index.html
@@ -8,17 +8,17 @@
 
   <link rel="stylesheet" href="style.css">
 
-  <style>
+  <!-- <style>
     .container {
       background-color: blueviolet;
     }
-  </style>
+  </style> -->
 </head>
 <body>
   
-  <div class="container" style="background-color: crimson;">
+  <div class="container" style="background-color: lightpink;">
     <h1>Container</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae quidem a amet deleniti nemo libero perferendis quae, sequi alias illum quos blanditiis distinctio, tenetur nostrum dicta voluptates fugit aliquid laborum.</p>
+    <p id="meu-paragrafo" style="background-color: purple;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae quidem a amet deleniti nemo libero perferendis quae, sequi alias illum quos blanditiis distinctio, tenetur nostrum dicta voluptates fugit aliquid laborum.</p>
   </div>
 
 </body>
