refatoração ef e especificidade

--- a/01-especificidade-efeito-cascata/index.html
+++ b/01-especificidade-efeito-cascata/index.html
@@ -9,17 +9,36 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- <style>
-    .container {
+    .container-cascata {
       background-color: blueviolet;
     }
   </style> -->
 </head>
 <body>
   
-  <div class="container" style="background-color: lightpink;">
-    <h1>Container</h1>
-    <p id="meu-paragrafo" style="background-color: purple;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae quidem a amet deleniti nemo libero perferendis quae, sequi alias illum quos blanditiis distinctio, tenetur nostrum dicta voluptates fugit aliquid laborum.</p>
+  <h1>Efeito cascata</h1>
+  <div class="container-cascata">
+    <h2>Container Cascata</h2>
   </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- <h1>Especificidade</h1>
+  <div class="container-especificidade">
+    <h2>Container Especificidade</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae quidem a amet deleniti nemo libero perferendis quae, sequi alias illum quos blanditiis distinctio, tenetur nostrum dicta voluptates fugit aliquid laborum.</p>
+  </div> -->
 </body>
 </html>
