--- a/nivel-12-css-avancado/01-pseudo-classes/index.html
+++ b/nivel-12-css-avancado/01-pseudo-classes/index.html
@@ -13,7 +13,7 @@
 
     <h2>First Child</h2>
 
-    <div>
+    <div class="first-child">
         <p class="padrao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet recusandae earum commodi tenetur asperiores at beatae necessitatibus aspernatur accusantium laudantium accusamus praesentium, iure illum rem, obcaecati maiores provident assumenda quod.</p>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam repudiandae assumenda sit in vel, labore, cumque nulla amet natus fugiat iste autem aut eos eveniet illo maiores facilis ea?</p>
@@ -21,15 +21,22 @@
 
     <h2>Last Child</h2>
 
-    <div>
+    <div class="last-child">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet recusandae earum commodi tenetur asperiores at beatae necessitatibus aspernatur accusantium laudantium accusamus praesentium, iure illum rem, obcaecati maiores provident assumenda quod.</p>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam repudiandae assumenda sit in vel, labore, cumque nulla amet natus fugiat iste autem aut eos eveniet illo maiores facilis ea?</p>
     </div>
 
+    <h2>NOT</h2>
+    <div class="not">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet recusandae earum commodi tenetur asperiores at beatae necessitatibus aspernatur accusantium laudantium accusamus praesentium, iure illum rem, obcaecati maiores provident assumenda quod.</p>
+
+        <p class="padrao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam repudiandae assumenda sit in vel, labore, cumque nulla amet natus fugiat iste autem aut eos eveniet illo maiores facilis ea?</p>
+    </div>
+
     <h2>NTH Child</h2>
 
-    <ul>
+    <ul class="nth-child">
         <li>item 1</li>
         <li>item 2</li>
         <li>item 3</li>
@@ -40,7 +47,7 @@
 
     <h2>NTH Last Child</h2>
 
-    <ul>
+    <ul class="nth-last-child">
         <li>item 1</li>
         <li>item 2</li>
         <li>item 3</li>
@@ -51,13 +58,15 @@
 
     <h2>Only child</h2>
 
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam quasi ipsa atque et repellat consectetur eligendi dolorum! Beatae, quae quam nostrum a tempora cumque eveniet voluptatem recusandae culpa aspernatur ipsum.</p>
-    </div>
+    <div class="only-child">
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam quasi ipsa atque et repellat consectetur eligendi dolorum! Beatae, quae quam nostrum a tempora cumque eveniet voluptatem recusandae culpa aspernatur ipsum.</p>
+        </div>
 
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus rerum reiciendis officia deleniti ducimus impedit fuga asperiores laborum provident expedita. Nemo eaque aliquam officia ab magni magnam accusantium tempore exercitationem?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi omnis laborum molestiae est eveniet sequi provident aspernatur dicta neque tempora rem rerum repudiandae dolorum quia modi nemo, minima, perferendis aliquam?</p>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus rerum reiciendis officia deleniti ducimus impedit fuga asperiores laborum provident expedita. Nemo eaque aliquam officia ab magni magnam accusantium tempore exercitationem?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi omnis laborum molestiae est eveniet sequi provident aspernatur dicta neque tempora rem rerum repudiandae dolorum quia modi nemo, minima, perferendis aliquam?</p>
+        </div>
     </div>
 </body>
 </html>
