--- a/nivel-09-css-intermediario/09-display/index.html
+++ b/nivel-09-css-intermediario/09-display/index.html
@@ -10,24 +10,24 @@
 </head>
 <body>
   <h2>Display block</h2>
-  <ul class="bloco">
+  <ul class="em-bloco">
     <li>1</li>
     <li>2</li>
     <li>3</li>
   </ul>
 
-  <h2>Display inline</h2>
+  <!-- <h2>Display inline</h2>
   <ul class="em-linha">
     <li>1</li>
     <li>2</li>
     <li>3</li>
-  </ul>
+  </ul> -->
 
-  <h2>Display inline-block</h2>
+  <!-- <h2>Display inline-block</h2>
   <ul class="em-linha-e-bloco">
     <li>1</li>
     <li>2</li>
     <li>3</li>
-  </ul>
+  </ul> -->
 </body>
 </html>
